# Wedding-Website

./: .gitignore  Pipfile  README.md  app.yaml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: AutoBlack.yml  build.yaml
WeddingWebsite/: __init__.py  admin.py  auth.py  config.py  exceptions.py  extensions.py  forms.py  mail.py  models.py  views.py
WeddingWebsite/admin/: __init__.py  admin.py  routes.py
WeddingWebsite/auth/: __init__.py  exceptions.py  forms.py  routes.py  utils.py
WeddingWebsite/lfgs/: __init__.py  models.py  routes.py
WeddingWebsite/static/: base.css  home.css  index.css  location.css  rsvp.css
WeddingWebsite/templates/: RSVP.html  base.html  create_lfg.html  details.html  guest.html  guest_edit.html  home.html  index.html  join_lfg.html  lfgs.html  location_cabin.html  location_hotel.html  login.html  photos.html  registry.html  send_email.html  send_rsvp_reminder.html
flaskr/: Exceptions.py  Users.py  __init__.py  app.py  auth.py  extensions.py  forms.py  main.py  models.py  profile.py  views.py
flaskr/templates/: base.html  index.html
tests/: conftest.py  flask_test.py  flask_test_config.py  pytest.ini  test_auth.py  test_db.py  test_fixtures.py  test_models.py
tests/test_admin/: test_dashbord.py  test_guest_id.py
tests/test_auth/: test_edit_profile.py  test_login.py  test_logout.py  test_register.py  test_requires_roles.py  (+1 more)
weddingwebsite/: __init__.py  config.py  exceptions.py  forms.py  mail.py  models.py  views.py
wwtep/: exceptions.py  mail.py
(+50 files in other folders)
