[tool.poetry]
name = "WeddingWebsite"
version = "0.1.0"
description = ""
authors = ["kgb33 <github@bassingthwaite.org>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
python-dotenv = "^0.12.0"
flask-pymongo = "^2.3.0"
mailjet-rest = "^1.3.3"
flask-login = "^0.5.0"
flask-wtf = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
mongomock = "^3.19.0"
pytest-dotenv = "^0.4.0"
tox = "^3.14.6"

[tool.poetry.extras]
test = ["pytest ./tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
